fixed margin-bottom in clear and copy buttons on small screens

--- a/src/components/markdownpreview/markdown/markdown.css
+++ b/src/components/markdownpreview/markdown/markdown.css
@@ -34,3 +34,9 @@ textarea{
         font-size: 0.6rem;
     }
 }
+
+@media screen and (max-width:510px){
+    .clear, .copy{
+        margin-bottom:10px;
+    }
+}
